# XaeroID

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  audit.toml  build.sh  build_for_correct_ffi.sh  cbindgen.toml  deny.toml  identity-fix.patch  personal_notes.md
.cargo/: config.toml
.github/workflows/: rust.yml
src/: cache.rs  circuits.rs  compressed.rs  credentials.rs  extern_id.rs  ffi.rs  identity.rs  lib.rs  nft.rs  pool.rs  secure_id.rs  storage.rs  zero_id.rs  zero_proof.rs  zero_wallet.rs  zero_wallet_manager.rs  zk_proofs.rs
src/circuits/: delegation_circuit.rs  invitation_circuit.rs  membership_circuit.rs  mod.rs  object_circuit.rs  role_circuit.rs  workspace_circuit.rs
src/domain/: id.rs  mod.rs  rkyv.rs  xaero_serde.rs  xaero_wallet.rs
tests/: falcon_test.rs
