[package]
name = "xaeroid"
version = "0.3.1-rc3"
edition = "2024"
authors = ["anirudh.vyas@goldilocksfashion.com", "ricky.nj@gmail.com"]
description = "A cloudless, decentralized DID key generator and identity verification system using Rust."
license = "MPL-2.0"
repository = "https://github.com/block-xaero/xaeroid"
readme = "README.md"
keywords = ["DID", "identity", "decentralized", "zero-knowledge", "privacy"]
categories = ["cryptography", "authentication"]

[lib]
name = "xaeroid"
crate-type = ["rlib"]

[dependencies]
rusted-ring = "0.3.1"
pqcrypto-traits = "0.3.4"
pqcrypto-falcon = "0.4"
rkyv = { version = "0.8.10",default-features = true, features = ["std", "bytecheck"] }
bytecheck = "0.8.1"
bytemuck = "1.23.0"
rand = "0.8.5"
rand_chacha = "0.3"
blake3 = "1.8.2"
multibase = "0.9.1"
thiserror = "2.0.12"

# Arkworks for Groth16 zk-SNARKs (stable Rust)
ark-std = "0.5.0"
ark-ff = "0.5.0"
ark-relations = "0.5.1"
ark-r1cs-std = "0.5.0"
ark-groth16 = "0.5.0"
ark-bn254 = "0.5.0"
ark-serialize = "0.5.0"
ark-snark = "0.5.1"
