[package]
name = "xaeroid"
version = "1.0.1"
edition = "2024"
description = "Simple decentralized identity with Ed25519 and hash commitments"
license = "MPL-2.0"

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
blake3 = "1.5"
bs58 = "0.5"
getrandom = "0.3.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4.3"
rand = "0.10.0-rc.5"

[dev-dependencies]
# None needed

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1